<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Main Pegel</string>
  <string name="title_activity_settings">Settings Activity</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="menu_water_table">Water level</string>

  <!-- Menu items -->
  <string name="menu_settings">Settings</string>
  <string name="menu_info">Version info</string>
  <string name="menu_oss_licenses">License info</string>
  <string name="menu_privacy_policy">Privacy policy</string>

  <!-- Toast messages -->
  <string name="toast_settings">Settings selected</string>
  <string name="toast_info">Versions info selected</string>
  <string name="toast_oss_licenses">Open source licenses</string>
  <string name="toast_privacy_policy">Privacy policy</string>

  <string name="water_level_location">Water level location:</string>
  <string name="reads_water_levels">Reads water levels:</string>
  <string name="level_date_time">Date / Time</string>
  <string name="level_curve">Level curve</string>
  <string name="level_temperature">Temperature</string>
  <string name="level_moon_phase">Moon phase</string>

  <string name="water_level_new">Level new: %1$d cm</string>
  <string name="water_level_old">Level old: %1$d cm</string>
  <string name="water_temp">Water : %1$.1f °C</string>
  <string name="data_timestamp">Timestamp : %1$s a Clock</string>
  <string name="no_data_available">No data available</string>
  <string name="little_level_data">Too little level data</string>

  <string name="wave_detection">Wave detection threshold [cm]:</string>
  <string name="vibration_alarm">Vibration alarm</string>
  <string name="beep">Beep alarm</string>
  <string name="hour">houer</string>
  <string name="on">ON</string>
  <string name="off">OFF</string>

  <string name="level_measur_houer">Measurement period in hours:</string>

  <string name="level_is_loading">Level is loading...</string>
  <string name="to_update">Update</string>

  <string name="min_15">15 Minutes</string>
  <string name="min_30">30 Minutes</string>
  <string name="min_45">45 Minutes</string>
  <string name="min_60">60 Minutes</string>
  <string name="min_75">75 Minutes</string>
  <string name="min_90">90 Minutes</string>

  <string name="hours_1">1 hour</string>
  <string name="hours_2">2 hours</string>
  <string name="hours_3">3 hours</string>
  <string name="hours_4">4 hours</string>
  <string name="hours_5">5 hours</string>
  <string name="hours_6">6 hours</string>
  <string name="hours_7">7 hours</string>
  <string name="hours_8">8 hours</string>
  <string name="hours_9">9 hours</string>
  <string name="hours_10">10 hours</string>
  <string name="hours_11">11 hours</string>
  <string name="hours_12">12 hours</string>
  <string name="hours_13">13 hours</string>
  <string name="hours_14">14 hours</string>
  <string name="hours_15">15 hours</string>
  <string name="hours_16">16 hours</string>
  <string name="hours_17">17 hours</string>
  <string name="hours_18">18 hours</string>
  <string name="hours_19">19 hours</string>
  <string name="hours_20">20 hours</string>
  <string name="hours_21">21 hours</string>
  <string name="hours_22">22 hours</string>
  <string name="hours_23">23 hours</string>
  <string name="days_1">1 day</string>
  <string name="days_2">2 days</string>
  <string name="days_3">3 days</string>
  <string name="days_4">4 days</string>
  <string name="days_5">5 days</string>
  <string name="days_6">6 days</string>
  <string name="days_7">7 days</string>
  <string name="weeks_1">1 week</string>
  <string name="weeks_2">2 weeks</string>
  <string name="weeks_3">3 weeks</string>
  <string name="days_30">30 days</string>

  <string name="graph_no_data">graph no data!</string>

  <!-- Mondphase -->
  <string name="moon_0_new">🌑</string>
  <string name="moon_1_waxing_crescent">🌒</string>
  <string name="moon_2_first_quarter">🌓</string>
  <string name="moon_3_waxing_gibbous">🌔</string>
  <string name="moon_4_full">🌕</string>
  <string name="moon_5_waning_gibbous">🌖</string>
  <string name="moon_6_last_quarter">🌗</string>
  <string name="moon_7_waning_crescent">🌘</string>

  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="lorem_ipsum">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
    volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui
    nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora
    torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel
    rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed
    rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
    egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque.
    Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante
    ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh.
    Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue
    leo egestas.\n\n
    Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet
    auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam.
    Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc
    ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet,
    tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta
    sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
    Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi
    laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem.
    Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl,
    imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet
    eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis
    augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam
    vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
    Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada
    fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida.
    Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo
    consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent
    bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat,
    quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero
    quis erat maximus, vitae volutpat diam dignissim.
  </string>

</resources>